<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">-->
<TextView android:id="@+id/first_open_heading"
    android:textSize="30sp"
    android:textStyle="bold"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_open_heading"/>
<TextView android:id="@+id/first_open_caption"
    android:layout_below="@+id/first_open_heading"
    android:textSize="15sp"
    android:textStyle="italic"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_open_caption"/>
<Button android:id="@+id/first_open_button"
    android:layout_below="@+id/first_open_caption"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="openSettings"
    android:text="@string/first_open_button"/>
</RelativeLayout>
