<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <RelativeLayout 
    android:id="@+id/first_open_layout"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">-->
<TextView android:id="@+id/first_open_heading"
    android:textSize="30sp"
    android:textStyle="bold"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_open_heading"/>
<TextView android:id="@+id/first_open_caption"
    android:layout_below="@+id/first_open_heading"
    android:textSize="15sp"
    android:textStyle="italic"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_open_caption"/>
<Button android:id="@+id/first_open_button"
    android:layout_below="@+id/first_open_caption"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="openSettings"
    android:text="@string/first_open_button"/>
</RelativeLayout>

<!--<android.support.v4.view.ViewPager 
  android:id="@+id/pager"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <android.support.v4.view.PagerTabStrip
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"/>
</android.support.v4.view.ViewPager>-->

<RelativeLayout android:id="@+id/pager"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
  <TextView android:id="@+id/pager_week_spend_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:text="@string/pager_week_spend_label"/>
  <TextView android:id="@+id/pager_week_spend_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/pager_week_spend_label"
    android:layout_alignBaseline="@+id/pager_week_spend_label"/>

  <TextView android:id="@+id/pager_week_goal_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_below="@+id/pager_week_spend_label"
    android:text="@string/pager_week_goal_label"/>
  <TextView android:id="@+id/pager_week_goal_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/pager_week_spend_label"
    android:layout_toRightOf="@+id/pager_week_goal_label"
    android:layout_alignBaseline="@+id/pager_week_goal_label"/>

  <TextView android:id="@+id/pager_week_spend_goal_percent_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_below="@+id/pager_week_goal_label"
    android:text="@string/pager_week_spend_goal_percent_label"/>
  <TextView android:id="@+id/pager_week_spend_goal_percent_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/pager_week_goal_label"
    android:layout_toRightOf="@+id/pager_week_spend_goal_percent_label"
    android:layout_alignBaseline="@+id/pager_week_spend_goal_percent_label"/>

  <TextView android:id="@+id/pager_total_save_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_below="@+id/pager_week_spend_goal_percent_label"
    android:text="@string/pager_total_save_label"/>
  <TextView android:id="@+id/pager_total_save_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/pager_save_goal_percent_label"
    android:layout_toRightOf="@+id/pager_total_save_label"
    android:layout_alignBaseline="@+id/pager_total_save_label"/>

</RelativeLayout>

</RelativeLayout>
